# marginalia-plugin-yourcloudlibrary

./: .env.example  .gitignore  IMPL_NOTES.md  PLAN.md  README.md  pack.yaml  pyproject.toml
scripts/: analyze_capture.py  probe_app.py  probe_auth.py  probe_loans.py  probe_login_click.py  probe_portals.py  probe_portals2.py  probe_reader.py  probe_reader_passive.py  probe_search.py  probe_search_live.py
tests/: conftest.py
tests/unit/: test_api_client.py  test_api_cookies.py  test_api_loans.py  test_api_retries.py  test_api_text.py  test_borrows.py  test_config.py  test_ingest_book.py  test_scrape_book.py  test_scraper_cache.py  test_scraper_partial.py  test_search_catalog.py  test_sync_loans.py  test_timestamps.py  test_tool_errors.py
ycl/: __init__.py  _config.py  _paths.py  _textcache.py  _time.py  borrows.py
ycl/api/: __init__.py  client.py  cookies.py  errors.py  scraper.py  text.py  types.py
ycl/cli/: login.py
ycl/session/: cookies.py
ycl/tools/: _common.py  _errors.py  auth_status.py  check_book.py  forget_book.py  ingest_book.py  list_books.py  record_borrow.py  scrape_book.py  search_catalog.py  sync_loans.py
