[project]
name = "marginalia-plugin-yourcloudlibrary"
version = "0.1.0"
description = "YourCloudLibrary borrowed-book scraper and ingestion plugin for Marginalia AI"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ycl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# Imports used only at module level for runtime behavior — moving them into
# TYPE_CHECKING would break the actual code paths that depend on them.
"ycl/borrows.py" = ["TC003"]
"ycl/api/client.py" = ["TC003"]
"ycl/api/cookies.py" = ["TC003"]
# Best-effort teardown / browser close — we don't care which exception each
# call raises, only that resource cleanup proceeds.
"ycl/cli/login.py" = ["SIM105"]
"scripts/*.py" = ["SIM105", "B007", "F841"]
